<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ProfileActivity" >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="415dp"
        android:layout_height="376dp"
        android:alpha="0.3"
        android:contentDescription="@string/front_image_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/oie_0ajgzspopstn" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="409dp"
        android:layout_height="620dp"
        android:background="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="85dp"
            android:layout_height="27dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/baloo"
            android:labelFor="@id/full_name"
            android:text="@string/full_name"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.128"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/full_name"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="69dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/baloo"
            android:labelFor="@id/user_mail"
            android:text="@string/email"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/full_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/full_name"
            app:layout_constraintTop_toBottomOf="@+id/full_name" />

        <EditText
            android:id="@+id/user_mail"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="125dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/baloo"
            android:labelFor="@id/user_phone"
            android:text="@string/phone_number"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/user_mail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/user_mail"
            app:layout_constraintTop_toBottomOf="@+id/user_mail" />

        <EditText
            android:id="@+id/user_phone"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/baloo"
            android:labelFor="@id/user_pass"
            android:text="@string/password"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/user_phone"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/user_phone"
            app:layout_constraintTop_toBottomOf="@+id/user_phone" />

        <EditText
            android:id="@+id/user_pass"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="328dp"
            android:layout_height="44dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/baloo"
            android:text="@string/update_profile"
            android:textSize="18sp"
            app:backgroundTint="#3685AA"
            app:layout_constraintEnd_toEndOf="@+id/user_pass"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/user_pass"
            app:layout_constraintTop_toBottomOf="@+id/user_pass" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="333dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/baloo"
            android:text="@string/logout"
            android:textSize="18sp"
            app:backgroundTint="#3685AA"
            app:layout_constraintEnd_toEndOf="@+id/btn_update"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn_update"
            app:layout_constraintTop_toBottomOf="@+id/btn_update" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="154dp"
        android:clickable="true"
        android:contentDescription="@string/user_image"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998"
        app:srcCompat="@drawable/image_shape" />

</androidx.constraintlayout.widget.ConstraintLayout>