<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="412dp"
        android:layout_height="370dp"
        android:alpha="0.5"
        android:contentDescription="@string/sign_up_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/oie_0ajgzspopstn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="184dp"
        android:layout_height="54dp"
        android:fontFamily="@font/baloo"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#3685AA"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/full_Name"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="@font/baloo"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="107dp"
        android:layout_height="28dp"
        android:fontFamily="@font/baloo"
        android:labelFor="@id/full_Name"
        android:text="@string/full_name"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/full_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.64" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="107dp"
        android:layout_height="31dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/baloo"
        android:labelFor="@id/email"
        android:text="@string/email"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/full_Name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/full_Name"
        app:layout_constraintTop_toBottomOf="@+id/full_Name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="@font/baloo"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="146dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:labelFor="@id/phone"
        android:text="@string/phone_number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="@font/baloo"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="147dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:labelFor="@id/password"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/phone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <EditText
        android:id="@+id/password"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/baloo"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <CheckBox
        android:id="@+id/terms_check"
        android:layout_width="159dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/baloo"
        android:text="@string/i_read_and_agree_to"
        android:textColor="#617073"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="151dp"
        android:layout_height="21dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/baloo"
        android:text="@string/terms_and_conditions"
        android:textAlignment="center"
        android:textColor="#3685AA"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="330dp"
        android:layout_height="44dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/baloo"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:backgroundTint="#3685AA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.456" />

</androidx.constraintlayout.widget.ConstraintLayout>